tests/snapshots/mechanics-implants-without_omega_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Punisher
ship/scanStrength                            = 12.000000
ship/passiveShieldEffectiveRechargeRate      = 3.218391
ship/passiveShieldRechargeRate               = 2.333333
ship/ehp                                     = 2991.573246
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.130000
ship/armorKineticDamageEffectiveResonance    = 0.150000
ship/armorExplosiveDamageEffectiveResonance  = 0.160000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 603.448268
ship/hullEhp                                 = 839.552218
ship/armorEhp                                = 1548.572759
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.540000
ship/powerFree                               = 83.750000
ship/cpuFree                                 = 175.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 10.416667
ship/capacitorPeakRecharge                   = 10.416667
ship/alignTime                               = 3.229269
ship/hp                                      = 562.500000
ship/powerOutput                             = 83.750000
ship/maxVelocity                             = 443.750000
ship/cpuOutput                               = 175.000000
ship/rechargeRate                            = 120000.000000
ship/agility                                 = 1.957500
ship/maxTargetRange                          = 31250.000000
ship/scanSpeed                               = 1500.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanRadarStrength                       = 12.000000
ship/shieldCapacity                          = 437.500000
ship/armorHP                                 = 836.229286
ship/armorEmDamageResonance                  = 0.400000
ship/armorExplosiveDamageResonance           = 0.640000
ship/armorKineticDamageResonance             = 0.600000
ship/armorThermalDamageResonance             = 0.520000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusAF                             = -20.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 500.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = -50.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 800.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/charisma                                 = 4.000000
character/intelligence                             = 4.000000
character/memory                                   = 4.000000
character/perception                               = 4.000000
character/willpower                                = 4.000000
character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

implant_1/type         = High-grade Amulet Alpha
implant_1/state        = offline
implant_1/armorHpBonus = 2.011357

implant_2/type         = High-grade Amulet Beta
implant_2/state        = offline
implant_2/armorHpBonus = 4.022714

implant_3/type         = High-grade Amulet Gamma
implant_3/state        = offline
implant_3/armorHpBonus = 6.034071

implant_4/type         = High-grade Amulet Delta
implant_4/state        = offline
implant_4/armorHpBonus = 8.045428

implant_5/type         = High-grade Amulet Epsilon
implant_5/state        = offline
implant_5/armorHpBonus = 10.056785
