tests/snapshots/mechanics-mutations-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Tristan
ship/scanStrength                            = 10.800000
ship/passiveShieldEffectiveRechargeRate      = 3.218391
ship/passiveShieldRechargeRate               = 2.333333
ship/ehp                                     = 2462.901001
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 603.448268
ship/hullEhp                                 = 1026.119377
ship/armorEhp                                = 833.333355
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/droneCapacityLoad                       = 15.000000
ship/droneActive                             = 3.000000
ship/droneDamagePerSecond                    = 62.287499
ship/damagePerSecondWithReload               = 62.287499
ship/damagePerSecondWithoutReload            = 62.287499
ship/powerFree                               = 42.750000
ship/cpuFree                                 = 132.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 86.500000
ship/capacitorPeakDelta                      = 7.208333
ship/capacitorPeakLoad                       = 1.125000
ship/capacitorPeakRecharge                   = 8.333333
ship/alignTime                               = 3.360610
ship/hp                                      = 687.500000
ship/powerOutput                             = 43.750000
ship/powerLoad                               = 1.000000
ship/maxVelocity                             = 393.750000
ship/cpuOutput                               = 162.500000
ship/cpuLoad                                 = 30.000000
ship/rechargeRate                            = 131250.000000
ship/agility                                 = 2.322000
ship/maxTargetRange                          = 50000.000000
ship/scanSpeed                               = 1875.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanMagnetometricStrength               = 10.800000
ship/shieldCapacity                          = 437.500000
ship/armorHP                                 = 562.500000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusGF                             = 50.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 437.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 750.000000
ship/shipBonusGF2                            = 37.500000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/droneBandwidthLoad                      = 15.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

medium_1/type              = Abyssal Warp Scrambler
medium_1/state             = active
medium_1/capacitorPeakLoad = 1.125000
medium_1/cycleTime         = 5000.000000
medium_1/capacitorNeed     = 5.625000
medium_1/heatDamage        = 3.750000

dronebay_1/type                         = Light Mutated Drone
dronebay_1/state                        = active
dronebay_1/damageVolley                 = 90.750000
dronebay_1/speedWithReload              = 4000.000000
dronebay_1/damagePerSecondWithoutReload = 22.687500
dronebay_1/hp                           = 468.750000
dronebay_1/maxVelocity                  = 4375.000000
dronebay_1/maxRange                     = 2750.000000
dronebay_1/damageMultiplier             = 4.537500
dronebay_1/trackingSpeed                = 3.450000
dronebay_1/shieldCapacity               = 116.250000
dronebay_1/armorHP                      = 206.250000

dronebay_2-3/type                         = Hobgoblin II
dronebay_2-3/state                        = active
dronebay_2-3/damageVolley                 = 79.199998
dronebay_2-3/speedWithReload              = 4000.000000
dronebay_2-3/damagePerSecondWithoutReload = 19.800000
dronebay_2-3/hp                           = 450.000000
dronebay_2-3/maxVelocity                  = 4200.000000
dronebay_2-3/maxRange                     = 2625.000000
dronebay_2-3/damageMultiplier             = 3.960000
dronebay_2-3/trackingSpeed                = 3.267000
dronebay_2-3/shieldCapacity               = 112.500000
dronebay_2-3/armorHP                      = 202.500000
