tests/snapshots/mechanics-stacking_per_operator-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 250.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 5.000000
capacitor/percentage           = 100.000000
capacitor/recharge             = 125.000000
capacitor/stable               = true
cpu/capacity                   = 130.000000
cpu/free                       = 40.000000
defense/armor/hp               = 450.000000
defense/armor/resist/em        = 86.216966
defense/armor/resist/expl      = 23.500000
defense/armor/resist/kin       = 36.249998
defense/armor/resist/therm     = 44.750000
defense/ehp                    = 2440.085574
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 1.800000
defense/recharge/shield        = 0.000000
defense/shield/hp              = 450.000000
defense/shield/recharge        = 625.000000
defense/shield/resist/em       = 12.500000
defense/shield/resist/expl     = 56.250000
defense/shield/resist/kin      = 47.499998
defense/shield/resist/therm    = 29.999999
defense/structure/hp           = 350.000000
defense/structure/resist/em    = 59.799997
defense/structure/resist/expl  = 59.799997
defense/structure/resist/kin   = 59.799997
defense/structure/resist/therm = 59.799997
drones/active                  = 0.000000
drones/bandwidth               = 0.000000
drones/bandwidth_load          = 0.000000
drones/capacity                = 0.000000
drones/capacity_load           = 0.000000
drones/dps                     = 0.000000
drones/range                   = 20.000000
navigation/agility             = 3.200000
navigation/align_time          = 4.733364
navigation/mass                = 1067.000000
navigation/speed               = 365.000000
navigation/warp_speed          = 5.000000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 41.000000
power/free                     = 38.000000
targeting/lock_range           = 22.500000
targeting/max_locked_targets   = 4.000000
targeting/scan_resolution      = 660.000000
targeting/sensor_strength      = 8.000000
targeting/signature_radius     = 35.000000

low_1/type  = Damage Control II
low_1/state = online

low_2-3/type  = EM Energized Membrane II
low_2-3/state = online
