tests/snapshots/mechanics-stacking_per_operator-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 312.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 8.333333
capacitor/percentage           = 100.000000
capacitor/recharge             = 93.750000
capacitor/stable               = true
cpu/capacity                   = 162.500000
cpu/free                       = 72.500000
defense/armor/hp               = 562.500000
defense/armor/resist/em        = 89.879590
defense/armor/resist/expl      = 23.500000
defense/armor/resist/kin       = 36.249998
defense/armor/resist/therm     = 44.750000
defense/ehp                    = 3069.257228
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 3.000000
defense/recharge/shield        = 0.000000
defense/shield/hp              = 562.500000
defense/shield/recharge        = 468.750000
defense/shield/resist/em       = 12.500000
defense/shield/resist/expl     = 56.250000
defense/shield/resist/kin      = 47.499998
defense/shield/resist/therm    = 29.999999
defense/structure/hp           = 437.500000
defense/structure/resist/em    = 59.799997
defense/structure/resist/expl  = 59.799997
defense/structure/resist/kin   = 59.799997
defense/structure/resist/therm = 59.799997
drones/active                  = 0.000000
drones/bandwidth               = 0.000000
drones/bandwidth_load          = 0.000000
drones/capacity                = 0.000000
drones/capacity_load           = 0.000000
drones/dps                     = 0.000000
drones/range                   = 60.000000
navigation/agility             = 2.160000
navigation/align_time          = 3.195020
navigation/mass                = 1067.000000
navigation/speed               = 456.250000
navigation/warp_speed          = 5.000000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 51.250000
power/free                     = 48.250000
targeting/lock_range           = 28.125000
targeting/max_locked_targets   = 4.000000
targeting/scan_resolution      = 825.000000
targeting/sensor_strength      = 9.600000
targeting/signature_radius     = 35.000000

low_1/type  = Damage Control II
low_1/state = online

low_2-3/type                    = EM Energized Membrane II
low_2-3/state                   = online
low_2-3/emDamageResistanceBonus = -48.525000
